src/objects/FormValidation__c.object
<CustomObject>
    <description>Object that represents a validation that is executed on a Community Form</description>
    <fields>
        <fullName>ApexClass__c</fullName>
        <label>Apex Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RegularExpression__c</fullName>
        <inlineHelpText>Special text string for describing a search pattern</inlineHelpText>
        <label>Regular Expression</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FormObjectsStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Form Validation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Validation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Validations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>